compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_module_from_type_in_annotation.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "\nimport mod\n\nconst c: mod    . Type = mod.Variant\n"
---
----- BEFORE RENAME
-- mod.gleam
pub type Type { Variant }

-- app.gleam

import mod

const c: mod    . Type = mod.Variant
         ↑▔▔                        


----- AFTER RENAME
-- mod.gleam
pub type Type { Variant }

-- app.gleam

import mod as module

const c: module    . Type = module.Variant
