compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_module_from_type_in_custom_type.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "\nimport mod\n\ntype Custom { Var(mod  . Type) }\n"
---
----- BEFORE RENAME
-- mod.gleam
pub type Type { Variant }

-- app.gleam

import mod

type Custom { Var(mod  . Type) }
                  ↑▔▔           


----- AFTER RENAME
-- mod.gleam
pub type Type { Variant }

-- app.gleam

import mod as module

type Custom { Var(module  . Type) }
