compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_module_from_type_in_type_alias.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "\nimport mod\n\ntype Alias = mod.Type\n"
---
----- BEFORE RENAME
-- mod.gleam
pub type Type { Variant }

-- app.gleam

import mod

type Alias = mod.Type
             ↑▔▔     


----- AFTER RENAME
-- mod.gleam
pub type Type { Variant }

-- app.gleam

import mod as module

type Alias = module.Type
