compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_module_from_variant_in_expression.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "\nimport option\n\npub fn main() {\n  echo option     . None\n}\n"
---
----- BEFORE RENAME
-- option.gleam
pub type Option(a) { Some(a) None }

-- app.gleam

import option

pub fn main() {
  echo option     . None
       ↑▔▔▔▔▔           
}


----- AFTER RENAME
-- option.gleam
pub type Option(a) { Some(a) None }

-- app.gleam

import option as opt

pub fn main() {
  echo opt     . None
}
